code25_all/scala/13410180.txt
val notNull[T]: T => Boolean = _ != null

<console>:7: error: missing parameter type for expanded function ((x$1) => x$1.$bang$eq(null))
       val notNull[T]: T => Boolean = _ != null
                                      ^
<console>:7: error: not found: type T
       val notNull[T]: T => Boolean = _ != null
                       ^
<console>:7: error: not found: type notNull
       val notNull[T]: T => Boolean = _ != null
           ^
<console>:7: error: not found: type T
       val notNull[T]: T => Boolean = _ != null
                   ^

scala> val notNull[T](f1: T => Boolean) = _ != null
<console>:1: error: ')' expected but '=>' found.
       val notNull[T](f1: T => Boolean) = _ != null

